Add tags to fixtures

--- a/frontend/src/fixtures/sha-256/manifest.json
+++ b/frontend/src/fixtures/sha-256/manifest.json
@@ -5,5 +5,6 @@
     "exec": "/usr/bin/shasum",
     "args": ["-a", "256", "{{args.content}}"]
   },
-  "output": "clipboard+replace"
+  "output": "clipboard+replace",
+  "tags": ["hash", "sha", "256"]
 }
