--- a/frontend/src/fixtures/reverse/manifest.json
+++ b/frontend/src/fixtures/reverse/manifest.json
@@ -5,5 +5,6 @@
     "exec": "./reverse.js",
     "args": ["{{args.content}}"]
   },
-  "output": "replace"
+  "output": "replace",
+  "tags": ["reverse"]
 }
