Add id to manifest

--- a/frontend/src/fixtures/sha-256/manifest.json
+++ b/frontend/src/fixtures/sha-256/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SHA256",
-  "description": "Generate SHA256 hash of selection",
+  "description": "Generate SHA256 hash of selection.",
   "pipe": {
     "exec": "/usr/bin/shasum",
     "args": ["-a", "256", "{{args.content}}"]
