Drop exact paths for bins
- Setting up Cmd.Env makes path work

--- a/frontend/src/fixtures/base64-decode/manifest.json
+++ b/frontend/src/fixtures/base64-decode/manifest.json
@@ -2,7 +2,7 @@
   "name": "Decode base64",
   "description": "Decodes base64 encoded text",
   "pipe": {
-    "exec": "/usr/bin/base64",
+    "exec": "base64",
     "args": ["-d"],
     "stdin": "{{args.content}}"
   },
