--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vite": "^3.0.7"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "ninja-keys": "^1.2.2",
     "svelte-codemirror-editor": "^1.1.0"
