--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/language": "^6.9.0",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@uiw/codemirror-extensions-basic-setup": "^4.21.13",
+    "@uiw/codemirror-extensions-langs": "^4.21.13",
+    "@uiw/codemirror-theme-gruvbox-dark": "^4.21.13",
+    "@uiw/react-codemirror": "^4.21.13",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "lucide-react": "^0.279.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20.6.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
