Add language detection helper
- Not yet hooked up to the editor
- Use @vscode/vscode-languagedetection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/language": "^6.9.0",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@types/lodash.debounce": "^4.0.7",
     "@uiw/codemirror-extensions-basic-setup": "^4.21.13",
     "@uiw/codemirror-extensions-langs": "^4.21.13",
     "@uiw/codemirror-theme-gruvbox-dark": "^4.21.13",
     "@uiw/react-codemirror": "^4.21.13",
+    "@vscode/vscode-languagedetection": "^1.0.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
